--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>The Ultimate String Reverser</title>
+    <title>The Ultimate Reversed String!</title>
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css">
   </head>
 
   <body>
-    <h1>The Ultimate String Reverser</h1>
+    <h1>The Ultimate Reversed String!</h1>
 
-    <form method="POST" action="/reverse">
-      <input type="text" name="string">
-      <input type="submit">
-    </form>
+    <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
+
+    <h2><%= @reversed_string %></h2>
   </body>
 </html>
